[gd_scene load_steps=8 format=3 uid="uid://esywf0ii8i6u"]

[ext_resource type="Script" uid="uid://bvtlfkeakvp15" path="res://scenes/main.gd" id="1_fmw02"]
[ext_resource type="Texture2D" uid="uid://bj2ambwei5ogi" path="res://assets/bg.png" id="2_fps3c"]
[ext_resource type="PackedScene" uid="uid://beaa828xfn3nx" path="res://scenes/snake_segment.tscn" id="2_io2sj"]
[ext_resource type="PackedScene" uid="uid://mv0qkpiwooyr" path="res://scenes/snake_head.tscn" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://tmcq5gpw66gu" path="res://scenes/hud.tscn" id="3_s77pf"]
[ext_resource type="Texture2D" uid="uid://dxyvfago0gd5f" path="res://assets/apple.png" id="5_sxedt"]
[ext_resource type="PackedScene" uid="uid://cad25ojl47q8" path="res://scenes/game_over_menu.tscn" id="6_xkat8"]

[node name="Main" type="Node"]
script = ExtResource("1_fmw02")
snake_head = ExtResource("3_o6xl0")
snake_segment = ExtResource("2_io2sj")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(500, 550)
texture = ExtResource("2_fps3c")

[node name="Hud" parent="." instance=ExtResource("3_s77pf")]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Food" type="Sprite2D" parent="."]
position = Vector2(12.5, 12.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_sxedt")
offset = Vector2(25, 25)

[node name="GameOverMenu" parent="." instance=ExtResource("6_xkat8")]
process_mode = 2

[node name="Panel" type="Panel" parent="."]
visible = false
offset_right = 50.0
offset_bottom = 50.0

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
